cabal-version:      2.4
name:               PerryWpLoader
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dawe
maintainer:         dawedawe@posteo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Loader

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      wreq ^>=0.5.4.2,
                      lens ^>=5.2.3,
                      bytestring ^>=0.11.4.0,
                      http-client ^>=0.7.14,
                      split ^>=0.2.3.5
    hs-source-dirs:   src
    default-language: Haskell2010

executable PerryWpLoader
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        PerryWpLoader

    hs-source-dirs:   app
    default-language: Haskell2010
